States and vp YAK - Yakistan ( Crossmountain Republic ) & TTT - Doglum's passage

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -242,12 +242,13 @@ VICTORY_POINTS_12459:0 "Trottort"
 #######################################################################
 # Crystal Empire ######################################################
 #######################################################################
+#CRY - Crystal Empire
 VICTORY_POINTS_2793:0 "Crystal Castle" #Crystal city
 VICTORY_POINTS_4342:0 "Crystal City"
 VICTORY_POINTS_7123:0 "Crystal City"
 VICTORY_POINTS_10594:0 "Crystal City"
 VICTORY_POINTS_7855:0 "Crystal City"
-VICTORY_POINTS_248:0 "North Crystal City Outskirts"
+VICTORY_POINTS_248:0 "North Crystal City Outskirts" #STATE_1196
 VICTORY_POINTS_10929:0 "West Crystal City Outskirts"
 VICTORY_POINTS_11078:0 "South Crystal City Outskirts"
 VICTORY_POINTS_8053:0 "East Crystal City Outskirts"
@@ -255,6 +256,7 @@ VICTORY_POINTS_2651:0 "Porridge Town" #Porridge Town
 #######################################################################
 # Olenia ##############################################################
 #######################################################################
+#OLE - Olengaard
 VICTORY_POINTS_12458:0 "Hjortland Palace" #Hjortland
 VICTORY_POINTS_5673:0 "East Hjortland"
 VICTORY_POINTS_12494:0 "Hjortland Beacon"
@@ -725,10 +727,137 @@ VICTORY_POINTS_13631:0 "Fillydelphia" #Fillydelphia
 VICTORY_POINTS_3716:0 "Fillydelphia Port"
 VICTORY_POINTS_4638:0 "West Fillydelphia"
 VICTORY_POINTS_13653:0 "South Fillydelphia"
+
+#######################################################################
+# Yakistan ############################################################
+#######################################################################
+#VICTORY_POINTS_:0 ""
+#YAK - Yakistan ( Crossmountain Republic )
+VICTORY_POINTS_566:0 "Yakistown" #Yakistown
+VICTORY_POINTS_4103:0 "South Yakistown"
+VICTORY_POINTS_8858:0 "" #STATE_1171
+VICTORY_POINTS_8973:0 "" #STATE_1172
+VICTORY_POINTS_4813:0 "" #STATE_1173
+VICTORY_POINTS_9402:0 "" #STATE_1175
+VICTORY_POINTS_9201:0 "" #STATE_1176
+VICTORY_POINTS_9300:0 ""
+VICTORY_POINTS_9645:0 "" #STATE_1177
+VICTORY_POINTS_9270:0 "" #STATE_1178
+VICTORY_POINTS_9341:0 ""
+VICTORY_POINTS_1407:0 "" #STATE_1179
+VICTORY_POINTS_2707:0 "" #STATE_1180
+VICTORY_POINTS_9404:0 ""
+VICTORY_POINTS_9733:0 "" #STATE_1181
+VICTORY_POINTS_9436:0 "" #STATE_1182
+VICTORY_POINTS_94:0 ""
+VICTORY_POINTS_2356:0 "" #STATE_1183
+VICTORY_POINTS_9405:0 ""
+VICTORY_POINTS_1900:0 ""
+VICTORY_POINTS_9655:0 ""
+VICTORY_POINTS_9352:0 "" #STATE_1184
+VICTORY_POINTS_9314:0 ""
+VICTORY_POINTS_9431:0 "Saihandale" #Saihandale
+VICTORY_POINTS_9846:0 "" #STATE_1186
+VICTORY_POINTS_1948:0 "" #STATE_1187
+VICTORY_POINTS_9243:0 ""
+VICTORY_POINTS_4081:0 ""
+VICTORY_POINTS_9570:0 "" #STATE_1188
+VICTORY_POINTS_5525:0 "" #STATE_1189
+VICTORY_POINTS_9072:0 "Karsakag" #Karsakag
+VICTORY_POINTS_9160:0 "West Karsakag"
+VICTORY_POINTS_9284:0 "" #STATE_1191
+VICTORY_POINTS_9219:0 ""
+VICTORY_POINTS_9014:0 "" #STATE_1192
+VICTORY_POINTS_3579:0 ""
+VICTORY_POINTS_5364:0 "" #STATE_1193
+VICTORY_POINTS_8912:0 ""
+VICTORY_POINTS_8891:0 "" #STATE_1194
+VICTORY_POINTS_2726:0 "" #STATE_1195
+VICTORY_POINTS_2810:0 ""
+VICTORY_POINTS_8659:0 ""
+VICTORY_POINTS_8620:0 "" #STATE_1197
+VICTORY_POINTS_8326:0 "" #STATE_1198
+VICTORY_POINTS_225:0 "Khereh Davsag" #Khereh Davsag
+VICTORY_POINTS_1356:0 "" #STATE_1201
+VICTORY_POINTS_8391:0 ""
+VICTORY_POINTS_4364:0 "" #STATE_1202
+VICTORY_POINTS_8521:0 "" #STATE_1203
+VICTORY_POINTS_8415:0 ""
+VICTORY_POINTS_8099:0 "" #STATE_1204
+VICTORY_POINTS_8502:0 "" #STATE_1205
+VICTORY_POINTS_7946:0 "" #STATE_1206
+VICTORY_POINTS_9073:0 "" #STATE_1207
+VICTORY_POINTS_8961:0 ""
+VICTORY_POINTS_8941:0 ""
+VICTORY_POINTS_8796:0 ""
+VICTORY_POINTS_1022:0 "" #STATE_1209
+VICTORY_POINTS_4442:0 "Gol Güür" #Gol Güür
+VICTORY_POINTS_3102:0 "East Gol Güür"
+VICTORY_POINTS_3517:0 "Tuuraikhan" #Tuuraikhan
+VICTORY_POINTS_8975:0 "" #STATE_1211
+VICTORY_POINTS_8845:0 ""
+VICTORY_POINTS_1091:0 "" #STATE_1212
+VICTORY_POINTS_1339:0 ""
+VICTORY_POINTS_8100:0 "" #STATE_1214
+VICTORY_POINTS_8846:0 "Nokhorsag Oi" #Nokhorsag Oi
+VICTORY_POINTS_3092:0 "" #STATE_1234
+VICTORY_POINTS_9202:0 ""
+VICTORY_POINTS_1094:0 "Bara'dur" #Bara'dur
+VICTORY_POINTS_1172:0 "" #STATE_1231
+VICTORY_POINTS_8441:0 ""
+VICTORY_POINTS_1080:0 "Sarlag Khot" #Sarlag Khot
+VICTORY_POINTS_8798:0 "West Sarlag Khot"
+VICTORY_POINTS_5119:0 "East Sarlag Khot"
+VICTORY_POINTS_2988:0 "" #STATE_1229
+VICTORY_POINTS_9061:0 "Saihan Tolgod" #Saihan Tolgod
+VICTORY_POINTS_3695:0 "North Saihan Tolgod"
+VICTORY_POINTS_9086:0 "West Saihan Tolgod"
+VICTORY_POINTS_9476:0 "" #STATE_1236
+VICTORY_POINTS_9232:0 "" #STATE_1237
+VICTORY_POINTS_9386:0 ""
+VICTORY_POINTS_8482:0 "" #STATE_1238
+VICTORY_POINTS_8258:0 "" #STATE_1239
+VICTORY_POINTS_8505:0 "" #STATE_1240
+VICTORY_POINTS_8459:0 ""
+VICTORY_POINTS_8591:0 "" #STATE_1241
+VICTORY_POINTS_8503:0 ""
+VICTORY_POINTS_8751:0 "" #STATE_1242
+VICTORY_POINTS_8813:0 "Modnihendi" #Modnihendi
+VICTORY_POINTS_8860:0 "East Modnihendi"
+VICTORY_POINTS_2619:0 "" #STATE_1244
+VICTORY_POINTS_8726:0 "" #STATE_1245
+VICTORY_POINTS_5027:0 ""
+VICTORY_POINTS_9004:0 "" #STATE_1246
+VICTORY_POINTS_8928:0 ""
+VICTORY_POINTS_9138:0 "" #STATE_1247
+VICTORY_POINTS_9036:0 "" #STATE_1248
+VICTORY_POINTS_9163:0 ""
+VICTORY_POINTS_9087:0 "" #STATE_1249
+VICTORY_POINTS_379:0 "" #STATE_1250
+VICTORY_POINTS_2344:0 ""
+VICTORY_POINTS_9265:0 "" #STATE_1251
+VICTORY_POINTS_9416:0 ""
+VICTORY_POINTS_9515:0 ""
+VICTORY_POINTS_2218:0 "Oin Shiltgeen" #Oin Shiltgeen
+VICTORY_POINTS_5061:0 "North Oin Shiltgeen"
+VICTORY_POINTS_8942:0 "" #STATE_1261
+VICTORY_POINTS_9016:0 "Holy Jak grove"
+VICTORY_POINTS_1760:0 "" #STATE_1266
+VICTORY_POINTS_9136:0 "" #STATE_847
+VICTORY_POINTS_7945:0 "" #STATE_852
+
+#TTT - Doglum's passage
+VICTORY_POINTS_9752:0 "" #STATE_811
+VICTORY_POINTS_9794:0 "" #STATE_812
+VICTORY_POINTS_9772:0 ""
+VICTORY_POINTS_9609:0 "" #STATE_813
+VICTORY_POINTS_9677:0 ""
+VICTORY_POINTS_9600:0 "" #STATE_814
+VICTORY_POINTS_9960:0 "" #STATE_810
+VICTORY_POINTS_9976:0 ""
 #######################################################################
 # Far North ###########################################################
 #######################################################################
-#VICTORY_POINTS_:0 ""
 #DMD - Diamondia
 VICTORY_POINTS_7000:0 "Diamondia" #Diamondia
 VICTORY_POINTS_6969:0 "East Diamondia"
