--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -264,7 +264,6 @@ VICTORY_POINTS_3598:0 "Юго-западный Хьёртланд"
 #######################################################################
 # Severiana ###########################################################
 #######################################################################
-#VICTORY_POINTS_:0 ""
 #SEV - Severiana
 VICTORY_POINTS_11373:0 "Санкт-Петерсхуф" #St. Petershoof
 VICTORY_POINTS_11354:0 "Петергоф"
@@ -432,7 +431,6 @@ VICTORY_POINTS_9978:0 "Новокристальск" #Novocrystal'sk
 #######################################################################
 # Nova Griffonia ######################################################
 #######################################################################
-#VICTORY_POINTS_:0 ""
 #GRF - Nova Griffonia
 VICTORY_POINTS_8721:0 "Ганзегайербург" #Gänsegeierburg
 VICTORY_POINTS_1488:0 "Западный Ганзегайербург"
@@ -574,7 +572,7 @@ VICTORY_POINTS_9062:0 "Восточный Клув Хот"
 VICTORY_POINTS_1464:0 "Нию Мирабель" #Nieuw Mirabelle
 VICTORY_POINTS_9018:0 ""
 VICTORY_POINTS_3817:0 "Мёрон" #Mörön
-VICTORY_POINTS_9045:0 "Святая Йакская Роща"
+VICTORY_POINTS_9045:0 "Св. Йакская Роща"
 VICTORY_POINTS_8872:0 "Ухте" #Uchte
 VICTORY_POINTS_4356:0 "Западный Ухте" #West Uchte
 VICTORY_POINTS_9154:0 "" #STATE_935
@@ -619,7 +617,6 @@ VICTORY_POINTS_9167:0 "" #Oatmeal Island
 #######################################################################
 # Manehattan Confederation ############################################
 #######################################################################
-#VICTORY_POINTS_:0 ""
 #CHI - Chicoltgo
 VICTORY_POINTS_13510:0 "Чикольтго"
 VICTORY_POINTS_3917:0 "Западный Чикольтго"
@@ -723,10 +720,137 @@ VICTORY_POINTS_13631:0 "Филлидельфия" #Fillydelphia
 VICTORY_POINTS_3716:0 "Филлидельфийский Порт"
 VICTORY_POINTS_4638:0 "Западная Филлидельфия"
 VICTORY_POINTS_13653:0 "Южная Филлидельфия"
+
+#######################################################################
+# Yakistan ############################################################
+#######################################################################
+#YAK - Yakistan ( Crossmountain Republic )
+VICTORY_POINTS_566:0 "Яктаун" #Yakistown
+VICTORY_POINTS_4103:0 "Южный Яктаун"
+
+VICTORY_POINTS_8858:0 "" #STATE_1171
+VICTORY_POINTS_8973:0 "" #STATE_1172
+VICTORY_POINTS_4813:0 "" #STATE_1173
+VICTORY_POINTS_9402:0 "" #STATE_1175
+VICTORY_POINTS_9201:0 "" #STATE_1176
+VICTORY_POINTS_9300:0 ""
+VICTORY_POINTS_9645:0 "" #STATE_1177
+VICTORY_POINTS_9270:0 "" #STATE_1178
+VICTORY_POINTS_9341:0 ""
+VICTORY_POINTS_1407:0 "" #STATE_1179
+VICTORY_POINTS_2707:0 "" #STATE_1180
+VICTORY_POINTS_9404:0 ""
+VICTORY_POINTS_9733:0 "" #STATE_1181
+VICTORY_POINTS_9436:0 "" #STATE_1182
+VICTORY_POINTS_94:0 ""
+VICTORY_POINTS_2356:0 "" #STATE_1183
+VICTORY_POINTS_9405:0 ""
+VICTORY_POINTS_1900:0 ""
+VICTORY_POINTS_9655:0 ""
+VICTORY_POINTS_9352:0 "" #STATE_1184
+VICTORY_POINTS_9314:0 ""
+VICTORY_POINTS_9431:0 "Сайхандейл" #Saihandale
+VICTORY_POINTS_9846:0 "" #STATE_1186
+VICTORY_POINTS_1948:0 "" #STATE_1187
+VICTORY_POINTS_9243:0 ""
+VICTORY_POINTS_4081:0 ""
+VICTORY_POINTS_9570:0 "" #STATE_1188
+VICTORY_POINTS_5525:0 "" #STATE_1189
+VICTORY_POINTS_9072:0 "Карсакаг" #Karsakag
+VICTORY_POINTS_9160:0 "Западный Карсакаг"
+VICTORY_POINTS_9284:0 "" #STATE_1191
+VICTORY_POINTS_9219:0 ""
+VICTORY_POINTS_9014:0 "" #STATE_1192
+VICTORY_POINTS_3579:0 ""
+VICTORY_POINTS_5364:0 "" #STATE_1193
+VICTORY_POINTS_8912:0 ""
+VICTORY_POINTS_8891:0 "" #STATE_1194
+VICTORY_POINTS_2726:0 "" #STATE_1195
+VICTORY_POINTS_2810:0 ""
+VICTORY_POINTS_8659:0 ""
+VICTORY_POINTS_8620:0 "" #STATE_1197
+VICTORY_POINTS_8326:0 "" #STATE_1198
+VICTORY_POINTS_225:0 "Керех Давсаг" #Khereh Davsag
+VICTORY_POINTS_1356:0 "" #STATE_1201
+VICTORY_POINTS_8391:0 ""
+VICTORY_POINTS_4364:0 "" #STATE_1202
+VICTORY_POINTS_8521:0 "" #STATE_1203
+VICTORY_POINTS_8415:0 ""
+VICTORY_POINTS_8099:0 "" #STATE_1204
+VICTORY_POINTS_8502:0 "" #STATE_1205
+VICTORY_POINTS_7946:0 "" #STATE_1206
+VICTORY_POINTS_9073:0 "" #STATE_1207
+VICTORY_POINTS_8961:0 ""
+VICTORY_POINTS_8941:0 ""
+VICTORY_POINTS_8796:0 ""
+VICTORY_POINTS_1022:0 "" #STATE_1209
+VICTORY_POINTS_4442:0 "Гол Гюур" #Gol Güür
+VICTORY_POINTS_3102:0 "Восточный Гол Гюур"
+VICTORY_POINTS_3517:0 "Туурайхан" #Tuuraikhan
+VICTORY_POINTS_8975:0 "" #STATE_1211
+VICTORY_POINTS_8845:0 ""
+VICTORY_POINTS_1091:0 "" #STATE_1212
+VICTORY_POINTS_1339:0 ""
+VICTORY_POINTS_8100:0 "" #STATE_1214
+VICTORY_POINTS_8846:0 "Нокхорсаг Ой" #Nokhorsag Oi
+VICTORY_POINTS_3092:0 "" #STATE_1234
+VICTORY_POINTS_9202:0 ""
+VICTORY_POINTS_1094:0 "Бара'дур" #Bara'dur
+VICTORY_POINTS_1172:0 "" #STATE_1231
+VICTORY_POINTS_8441:0 ""
+VICTORY_POINTS_1080:0 "Сарлаг Хот" #Sarlag Khot
+VICTORY_POINTS_8798:0 "Западный Сарлаг Хот"
+VICTORY_POINTS_5119:0 "Восточный Сарлаг Хот"
+VICTORY_POINTS_2988:0 "" #STATE_1229
+VICTORY_POINTS_9061:0 "Сайхан Толгод" #Saihan Tolgod
+VICTORY_POINTS_3695:0 "Северный Сайхан Толгод"
+VICTORY_POINTS_9086:0 "Западный Сайхан Толгод"
+VICTORY_POINTS_9476:0 "" #STATE_1236
+VICTORY_POINTS_9232:0 "" #STATE_1237
+VICTORY_POINTS_9386:0 ""
+VICTORY_POINTS_8482:0 "" #STATE_1238
+VICTORY_POINTS_8258:0 "" #STATE_1239
+VICTORY_POINTS_8505:0 "" #STATE_1240
+VICTORY_POINTS_8459:0 ""
+VICTORY_POINTS_8591:0 "" #STATE_1241
+VICTORY_POINTS_8503:0 ""
+VICTORY_POINTS_8751:0 "" #STATE_1242
+VICTORY_POINTS_8813:0 "Моднихенди" #Modnihendi
+VICTORY_POINTS_8860:0 "Восточный Моднихенди"
+VICTORY_POINTS_2619:0 "" #STATE_1244
+VICTORY_POINTS_8726:0 "" #STATE_1245
+VICTORY_POINTS_5027:0 ""
+VICTORY_POINTS_9004:0 "" #STATE_1246
+VICTORY_POINTS_8928:0 ""
+VICTORY_POINTS_9138:0 "" #STATE_1247
+VICTORY_POINTS_9036:0 "" #STATE_1248
+VICTORY_POINTS_9163:0 ""
+VICTORY_POINTS_9087:0 "" #STATE_1249
+VICTORY_POINTS_379:0 "" #STATE_1250
+VICTORY_POINTS_2344:0 ""
+VICTORY_POINTS_9265:0 "" #STATE_1251
+VICTORY_POINTS_9416:0 ""
+VICTORY_POINTS_9515:0 ""
+VICTORY_POINTS_2218:0 "Ойн Щилтджин" #Oin Shiltgeen
+VICTORY_POINTS_5061:0 "Северный Ойн Щилтджин"
+VICTORY_POINTS_8942:0 "" #STATE_1261
+VICTORY_POINTS_9016:0 "Св. Йакская Роща"
+VICTORY_POINTS_1760:0 "" #STATE_1266
+VICTORY_POINTS_9136:0 "" #STATE_847
+VICTORY_POINTS_7945:0 "" #STATE_852
+
+#TTT - Doglum's passage
+VICTORY_POINTS_9752:0 "" #STATE_811
+VICTORY_POINTS_9794:0 "" #STATE_812
+VICTORY_POINTS_9609:0 "" #STATE_813
+VICTORY_POINTS_9677:0 ""
+VICTORY_POINTS_9600:0 "" #STATE_814
+VICTORY_POINTS_9960:0 "" #STATE_810
+VICTORY_POINTS_9976:0 ""
+
 #######################################################################
 # Far North ###########################################################
 #######################################################################
-#VICTORY_POINTS_:0 ""
 #DMD - Diamondia
 VICTORY_POINTS_7000:0 "Диамондия" #Diamondia
 VICTORY_POINTS_6969:0 "Восточная Диамондия"
