--- a/localisation/DDR_gui_l_english.yml
+++ b/localisation/DDR_gui_l_english.yml
@@ -8,31 +8,31 @@ EQUIPMENT_SELECTION_MENU_TEXT:0 "Equipment selection menu for different creature
 CREATE_BUTTON_TEXT:0 "Create"
 CLOSE_BUTTON_TEXT:0 "Close"
 
-SET_AMOUNT_OF_EQUIPMENT_EARTHPONY:0 "[?equipment_plan_earthpony]"
-SET_AMOUNT_OF_EQUIPMENT_UNICORN:0 "[?equipment_plan_unicorn]"
-SET_AMOUNT_OF_EQUIPMENT_PEGASUS:0 "[?equipment_plan_pegasus]"
-SET_AMOUNT_OF_EQUIPMENT_ZMIH:0 "[?equipment_plan_zmih]"
+SET_AMOUNT_OF_EQUIPMENT_EARTHPONY:0 "[?equipment_cap_earthpony_hoof]"
+SET_AMOUNT_OF_EQUIPMENT_UNICORN:0 "[?equipment_cap_unicorn_hoof]"
+SET_AMOUNT_OF_EQUIPMENT_PEGASUS:0 "[?equipment_cap_pegasi_hoof]"
+SET_AMOUNT_OF_EQUIPMENT_ZMIH:0 "[?equipment_cap_zmih_hoof]"
 
-SET_AMOUNT_OF_EQUIPMENT_CRYSTAL_EARTHPONY:0 "[?equipment_plan_crystal_earthpony]"
-SET_AMOUNT_OF_EQUIPMENT_CRYSTAL_UNICORNS:0 "[?equipment_plan_crystal_unicorns]"
-SET_AMOUNT_OF_EQUIPMENT_CRYSTAL_PEGASI:0 "[?equipment_plan_crystal_pegasi]"
+SET_AMOUNT_OF_EQUIPMENT_CRYSTAL_EARTHPONY:0 "[?equipment_cap_crystal_earthpony_hoof]"
+SET_AMOUNT_OF_EQUIPMENT_CRYSTAL_UNICORNS:0 "[?equipment_cap_crystal_unicorn_hoof]"
+SET_AMOUNT_OF_EQUIPMENT_CRYSTAL_PEGASI:0 "[?equipment_cap_crystal_pegasi_hoof]"
 
-SET_AMOUNT_OF_EQUIPMENT_DEER:0 "[?equipment_plan_deer]"
-SET_AMOUNT_OF_EQUIPMENT_CHANGELING:0 "[?equipment_plan_changeling]"
-SET_AMOUNT_OF_EQUIPMENT_THESTRALS:0 "[?equipment_plan_thestrals]"
+SET_AMOUNT_OF_EQUIPMENT_DEER:0 "[?equipment_cap_deer_hoof]"
+SET_AMOUNT_OF_EQUIPMENT_CHANGELING:0 "[?equipment_cap_changeling_hoof]"
+SET_AMOUNT_OF_EQUIPMENT_THESTRALS:0 "[?equipment_cap_thestrals_hoof]"
 
-SET_AMOUNT_OF_EQUIPMENT_GRIFFINS:0 "[?equipment_plan_griffins]"
-SET_AMOUNT_OF_EQUIPMENT_DRAGONS:0 "[?equipment_plan_dragons]"
+SET_AMOUNT_OF_EQUIPMENT_GRIFFINS:0 "[?equipment_cap_griffon_claw]"
+SET_AMOUNT_OF_EQUIPMENT_DRAGONS:0 "[?equipment_cap_dragon_claw]"
 
-SET_AMOUNT_OF_EQUIPMENT_DOGS:0 "[?equipment_plan_dogs]"
-SET_AMOUNT_OF_EQUIPMENT_BEARS:0 "[?equipment_plan_bears]"
+SET_AMOUNT_OF_EQUIPMENT_DOGS:0 "[?equipment_cap_dog_paw]"
+SET_AMOUNT_OF_EQUIPMENT_BEARS:0 "[?equipment_cap_bear_paw]"
 
-SET_AMOUNT_OF_EQUIPMENT_YAK:0 "[?equipment_plan_yak]"
+SET_AMOUNT_OF_EQUIPMENT_YAK:0 "[?equipment_cap_yak_yak]"
 
-SET_AMOUNT_OF_EQUIPMENT_PENGUINS:0 "[?equipment_plan_penguins]"
+SET_AMOUNT_OF_EQUIPMENT_PENGUINS:0 "[?equipment_cap_penguin_penguin]"
 
-SET_AMOUNT_OF_EQUIPMENT_MAGIC_UNICORN:0 "[?equipment_plan_magic_unicorn]"
-SET_AMOUNT_OF_EQUIPMENT_MAGIC_CHANGELING:0 "[?equipment_plan_magic_changeling]"
+SET_AMOUNT_OF_EQUIPMENT_MAGIC_UNICORN:0 "[?equipment_cap_unicorn_magical]"
+SET_AMOUNT_OF_EQUIPMENT_MAGIC_CHANGELING:0 "[?equipment_cap_changeling_magical]"
 
 PONIES:0 "Ponies"
 CRYSTAL_PONIES:0 "Crystal Ponies"
