--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -347,7 +347,7 @@
  STATE_346:0 "Ruins of Cloudsdale"
  STATE_347:0 "STATE_347"
  STATE_348:0 "STATE_348"
- STATE_349:0 "STATE_349"
+ STATE_349:0 "Dale"
  STATE_350:0 "STATE_350"
  STATE_351:0 "STATE_351"
  STATE_352:0 "STATE_352"
@@ -551,9 +551,9 @@
  STATE_550:0 "Luna Nova"
  STATE_551:0 "Bitterberry"
  STATE_552:0 "Hope Hollow"
- STATE_553:0 "STATE_553"
- STATE_554:0 "STATE_554"
- STATE_555:0 "STATE_555"
+ STATE_553:0 "Topspud"
+ STATE_554:0 "Owlaha"
+ STATE_555:0 "Wichita"
  STATE_556:0 "STATE_556"
  STATE_557:0 "STATE_557"
  STATE_558:0 "STATE_558"
