--- a/localisation/replace/state_names_overrides_l_russian.yml
+++ b/localisation/replace/state_names_overrides_l_russian.yml
@@ -347,7 +347,7 @@
  STATE_346:0 "руины Клаудсдейла"
  STATE_347:0 "STATE_347"
  STATE_348:0 "STATE_348"
- STATE_349:0 "STATE_349"
+ STATE_349:0 "Дейл"
  STATE_350:0 "STATE_350"
  STATE_351:0 "STATE_351"
  STATE_352:0 "STATE_352"
@@ -551,9 +551,9 @@
  STATE_550:0 "Луна Нова"
  STATE_551:0 "Биттерберри"
  STATE_552:0 "Хоуп Холлоу"
- STATE_553:0 "STATE_553"
- STATE_554:0 "STATE_554"
- STATE_555:0 "STATE_555"
+ STATE_553:0 "Топспуд"
+ STATE_554:0 "Овлаха"
+ STATE_555:0 "Вичита"
  STATE_556:0 "STATE_556"
  STATE_557:0 "STATE_557"
  STATE_558:0 "STATE_558"
