Some basic stuff for Equestria. Loc fixes

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -119,12 +119,12 @@ LAR_communism_ADJ:0 ""
 ##################
 SEV_neutrality:0 "Severianskaja Imperija"
 SEV_neutrality_DEF:0 "The Severianian Empire"
-SEV_fascism:0 ""
-SEV_fascism_DEF:0 ""
-SEV_communism:0 ""
-SEV_communism_DEF:0 ""
-SEV_democratic:0 ""
-SEV_democratic_DEF:0 ""
+SEV_fascism:0 "Severiana"
+SEV_fascism_DEF:0 "Severianian State"
+SEV_communism:0 "SSFSR"
+SEV_communism_DEF:0 "Severianian Soviet Federative Socialist Republic"
+SEV_democratic:0 "Severianian Federation"
+SEV_democratic_DEF:0 "Severianian Federation"
 SEV_fascism_ADJ:0 "Severianian"
 SEV_democratic_ADJ:0 "Severianian"
 SEV_neutrality_ADJ:0 "Severianian"
