--- a/localisation/country_EQS_l_english.yml
+++ b/localisation/country_EQS_l_english.yml
@@ -1,8 +1,30 @@
 ﻿l_english:
-#COUNTRYNAME
+#######################################################
+##### STATE ###########################################
+#######################################################
 
-#NAMES
+#######################################################
+##### PARTIES #########################################
+#######################################################
 
-#PARTIES
+#######################################################
+##### LEADERS #########################################
+#######################################################
+KING_SOMBRA_LEADER_DESC:0 "Sombra is the best king. (Change my mind)"
+LUNA_HARMONY_LEADER_DESC:0 "The best Princess. (Change my mind)"
 
-#FOCUS LOCALISATION
+#######################################################
+##### FOCUSES #########################################
+#######################################################
+
+#######################################################
+##### IDEAS ###########################################
+#######################################################
+
+#######################################################
+##### DECISIONS #######################################
+#######################################################
+
+#######################################################
+##### EVENTS ##########################################
+#######################################################
