--- a/localisation/country_EQS_l_russian.yml
+++ b/localisation/country_EQS_l_russian.yml
@@ -1,8 +1,30 @@
 ﻿l_russian:
-#COUNTRYNAME
+#######################################################
+##### STATE ###########################################
+#######################################################
 
-#NAMES
+#######################################################
+##### PARTIES #########################################
+#######################################################
 
-#PARTIES
+#######################################################
+##### LEADERS #########################################
+#######################################################
+KING_SOMBRA_LEADER_DESC:0 "Сомбра - лучший король. (Change my mind)"
+LUNA_HARMONY_LEADER_DESC:0 "Лучшая Принцесса. (Change my mind)"
 
-#FOCUS LOCALISATION
+#######################################################
+##### FOCUSES #########################################
+#######################################################
+
+#######################################################
+##### IDEAS ###########################################
+#######################################################
+
+#######################################################
+##### DECISIONS #######################################
+#######################################################
+
+#######################################################
+##### EVENTS ##########################################
+#######################################################
