--- a/localisation/replace/tdr_eaw_countries_overrides_l_english.yml
+++ b/localisation/replace/tdr_eaw_countries_overrides_l_english.yml
@@ -36,13 +36,13 @@ CRY_communism_ADJ:0 "Crystal"
 # East Equestria #
 ##################
 STL_neutrality:0 "Novokristal'sk"
-STL_neutrality_DEF:0 "Novokristal'sk"
-STL_fascism:0 ""
-STL_fascism_DEF:0 ""
-STL_communism:0 ""
-STL_communism_DEF:0 ""
-STL_democratic:0 ""
-STL_democratic_DEF:0 ""
+STL_neutrality_DEF:0 "Novokristal'sk Province"
+STL_fascism:0 "Snowstorm Empire"
+STL_fascism_DEF:0 "Snowstorm Empire"
+STL_communism:0 "Novokristal'sk Commune"
+STL_communism_DEF:0 "Novokristal'sk Commune"
+STL_democratic:0 "Novokristal'sk"
+STL_democratic_DEF:0 "Free City Of Novokristal'sk"
 STL_fascism_ADJ:0 "Severianian"
 STL_democratic_ADJ:0 "Severianian"
 STL_neutrality_ADJ:0 "Severianian"
