--- a/localisation/replace/tdr_eaw_countries_overrides_l_russian.yml
+++ b/localisation/replace/tdr_eaw_countries_overrides_l_russian.yml
@@ -36,13 +36,13 @@ CRY_communism_ADJ:0 "Кристальн"
 # East Equestria #
 ##################
 STL_neutrality:0 "Новокристальск"
-STL_neutrality_DEF:0 "Новокристальск"
-STL_fascism:0 ""
-STL_fascism_DEF:0 ""
-STL_communism:0 ""
-STL_communism_DEF:0 ""
-STL_democratic:0 ""
-STL_democratic_DEF:0 ""
+STL_neutrality_DEF:0 "Новокристальскак Губерния"
+STL_fascism:0 "Вьюжная Империя"
+STL_fascism_DEF:0 "Вьюжная Империя"
+STL_communism:0 "Коммуна Новокристальска"
+STL_communism_DEF:0 "Коммуна Новокристальска"
+STL_democratic:0 "Новокристальск"
+STL_democratic_DEF:0 "Вольный Город Новокристальск"
 STL_fascism_ADJ:0 "Северянск"
 STL_democratic_ADJ:0 "Северянск"
 STL_neutrality_ADJ:0 "Северянск"
