--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -360,7 +360,7 @@
  STATE_359:0 "STATE_359"
  STATE_360:0 "STATE_360"
  STATE_361:0 "STATE_361"
- STATE_362:0 "STATE_362"
+ STATE_362:0 "Boulder"
  STATE_363:0 "STATE_363"
  STATE_364:0 "Fleatsam"
  STATE_365:0 "STATE_365"
@@ -546,7 +546,7 @@
  STATE_545:0 "Eaglegan"
  STATE_546:0 "Flom"
  STATE_547:0 "Pontoria"
- STATE_548:0 "STATE_548"
+ STATE_548:0 "Kingpony"
  STATE_549:0 "STATE_549"
  STATE_550:0 "Luna Nova"
  STATE_551:0 "Bitterberry"
@@ -554,42 +554,42 @@
  STATE_553:0 "Topspud"
  STATE_554:0 "Owlaha"
  STATE_555:0 "Wichita"
- STATE_556:0 "STATE_556"
- STATE_557:0 "STATE_557"
- STATE_558:0 "STATE_558"
- STATE_559:0 "STATE_559"
- STATE_560:0 "STATE_560"
- STATE_561:0 "STATE_561"
- STATE_562:0 "STATE_562"
- STATE_563:0 "STATE_563"
+ STATE_556:0 "Broken Bow"
+ STATE_557:0 "Chugwater"
+ STATE_558:0 "Winona"
+ STATE_559:0 "Otis"
+ STATE_560:0 "Little Equestria"
+ STATE_561:0 "Pickle Creek"
+ STATE_562:0 "Jadestown"
+ STATE_563:0 "Hill City"
  STATE_564:0 "Whinnysota"
  STATE_565:0 "Hippogriffe-Falls"
  STATE_566:0 "Dufrost"
  STATE_567:0 "Barkfield"
  STATE_568:0 "STATE_568"
  STATE_569:0 "Floodville"
- STATE_570:0 "STATE_570"
- STATE_571:0 "STATE_571"
- STATE_572:0 "STATE_572"
- STATE_573:0 "STATE_573"
- STATE_574:0 "STATE_574"
- STATE_575:0 "STATE_575"
- STATE_576:0 "STATE_576"
- STATE_577:0 "STATE_577"
- STATE_578:0 "STATE_578"
- STATE_579:0 "STATE_579"
+ STATE_570:0 "Reed Point"
+ STATE_571:0 "Sawmill Creek"
+ STATE_572:0 "Sunray"
+ STATE_573:0 "Harmony"
+ STATE_574:0 "Hot Springs"
+ STATE_575:0 "Aspen Meadows"
+ STATE_576:0 "Sugarloaf"
+ STATE_577:0 "Lingle"
+ STATE_578:0 "Spotted Cow"
+ STATE_579:0 "Livingston"
  STATE_580:0 "Marechester"
- STATE_581:0 "STATE_581"
+ STATE_581:0 "Mapleburn"
  STATE_582:0 "STATE_582"
- STATE_583:0 "STATE_583"
- STATE_584:0 "STATE_584"
+ STATE_583:0 "Story"
+ STATE_584:0 "Lodge Grass"
  STATE_585:0 "STATE_585"
  STATE_586:0 "STATE_586"
  STATE_587:0 "Woodbury"
  STATE_588:0 "STATE_588"
- STATE_589:0 "STATE_589"
+ STATE_589:0 "Twin Cedars"
  STATE_590:0 "Roadschester"
- STATE_591:0 "STATE_591"
+ STATE_591:0 "Sleepy Hollow"
  STATE_592:0 "Whinnytonka"
  STATE_593:0 "STATE_593"
  STATE_594:0 "STATE_594"
@@ -618,7 +618,7 @@
  STATE_617:0 "Bucklebury"
  STATE_618:0 "Greenwater"
  STATE_619:0 "STATE_619"
- STATE_620:0 "STATE_620"
+ STATE_620:0 "Fishtail"
  STATE_621:0 "Burnsville"
  STATE_622:0 "STATE_622"
  STATE_623:0 "Trottort"
