--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -26,6 +26,33 @@ VICTORY_POINTS_3503:0 "Dale" #Dale
 VICTORY_POINTS_13129:0 "Wichita" #Wichita
 VICTORY_POINTS_2646:0 "Owlaha" #Owlaha
 VICTORY_POINTS_3300:0 "Topspud" #Topspud
+VICTORY_POINTS_12925:0 "Otis" #Otis
+VICTORY_POINTS_12812:0 "Winona" #Winona
+VICTORY_POINTS_12872:0 "Broken Bow" #Broken Bow
+VICTORY_POINTS_5641:0 "Chugwater" #Chugwater
+VICTORY_POINTS_12632:0 "Kingpony" #Kingpony
+VICTORY_POINTS_4261:0 "Hill City" #Hill City
+VICTORY_POINTS_13066:0 "Pickle Creek" #Pickle Creek
+VICTORY_POINTS_898:0 "Little Equestria" #Little Equestria
+VICTORY_POINTS_169:0 "Sunray" #Sunray
+VICTORY_POINTS_2264:0 "Boulder" #Boulder
+VICTORY_POINTS_5318:0 "Hot Springs" #Hot Springs
+VICTORY_POINTS_13077:0 "Harmony" #Harmony
+VICTORY_POINTS_4286:0 "Sawmill Creek" #Sawmill Creek
+VICTORY_POINTS_12729:0 "Mapleburn" #Mapleburn
+VICTORY_POINTS_12511:0 "Lodge Grass" #Lodge Grass
+VICTORY_POINTS_5639:0 "Twin Cedars" #Twin Cedars
+VICTORY_POINTS_12184:0 "Sleepy Hollow" #Sleepy Hollow
+VICTORY_POINTS_3559:0 "Fishtail" #Fishtail
+VICTORY_POINTS_4558:0 "Sugarloaf" #Sugarloaf
+VICTORY_POINTS_12389:0 "North Sugarloaf" #Sugarloaf
+VICTORY_POINTS_12622:0 "Story" #Story
+VICTORY_POINTS_3099:0 "Livingston" #Livingston
+VICTORY_POINTS_4902:0 "Aspen Meadows" #Aspen Meadows
+VICTORY_POINTS_815:0 "Jadestown" #Jadestown
+VICTORY_POINTS_12964:0 "Reed Point" #Reed Point
+VICTORY_POINTS_12818:0 "Lingle" #Lingle
+VICTORY_POINTS_12778:0 "Spotted Cow" #Spotted Cow
 #######################################################################
 # Governorate Whinnyapolis ############################################
 #######################################################################
