--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -25,6 +25,33 @@ VICTORY_POINTS_3503:0 "Дейл" #Dale
 VICTORY_POINTS_13129:0 "Вичита" #Wichita
 VICTORY_POINTS_2646:0 "Овлаха" #Owlaha
 VICTORY_POINTS_3300:0 "Топспуд" #Topspud
+VICTORY_POINTS_12925:0 "Отис" #Otis
+VICTORY_POINTS_12812:0 "Уайнона" #Winona
+VICTORY_POINTS_12872:0 "Брокен-Боу" #Broken Bow
+VICTORY_POINTS_5641:0 "Чагуотер" #Chugwater
+VICTORY_POINTS_12632:0 "Кингпони" #Kingpony
+VICTORY_POINTS_4261:0 "Хилл Сити" #Hill City
+VICTORY_POINTS_13066:0 "Пикл-Крик" #Pickle Creek
+VICTORY_POINTS_898:0 "Литл-Эквестрия" #Little Equestria
+VICTORY_POINTS_169:0 "Санрей" #Sunray
+VICTORY_POINTS_2264:0 "Боулдер" #Boulder
+VICTORY_POINTS_5318:0 "Хот Спрингс" #Hot Springs
+VICTORY_POINTS_13077:0 "Хармони" #Harmony
+VICTORY_POINTS_4286:0 "Сомилл-Крик" #Sawmill Creek
+VICTORY_POINTS_12729:0 "Мэйплебёрн" #Mapleburn
+VICTORY_POINTS_12511:0 "Лодж Грасс" #Lodge Grass
+VICTORY_POINTS_5639:0 "Твин Сидарс" #Twin Cedars
+VICTORY_POINTS_12184:0 "Слипи-Холлоу" #Sleepy Hollow
+VICTORY_POINTS_3559:0 "Фиштейл" #Fishtail
+VICTORY_POINTS_4558:0 "Шугарлоф" #Sugarloaf
+VICTORY_POINTS_12389:0 "Северный Шугарлоф" #Sugarloaf
+VICTORY_POINTS_12622:0 "Стори" #Story
+VICTORY_POINTS_3099:0 "Ливингстон" #Livingston
+VICTORY_POINTS_4902:0 "Аспен Медоус" #Aspen Meadows
+VICTORY_POINTS_815:0 "Джейдестаун" #Jadestown
+VICTORY_POINTS_12964:0 "Рид Пойнт" #Reed Point
+VICTORY_POINTS_12818:0 "Лингл" #Lingle
+VICTORY_POINTS_12778:0 "Споттед Кау" #Spotted Cow
 #######################################################################
 # Governorate Whinnyapolis ############################################
 #######################################################################
