Starting event for Equestria

--- a/localisation/country_EQS_l_english.yml
+++ b/localisation/country_EQS_l_english.yml
@@ -28,3 +28,13 @@ LUNA_HARMONY_LEADER_DESC:0 "The best Princess. (Change my mind)"
 #######################################################
 ##### EVENTS ##########################################
 #######################################################
+equestria.0.t:0 ""
+equestria.0.d:0 ""
+equestria.0.a:0 ""
+equestria.0.b:0 ""
+
+equestria.1.t1:0 ""
+equestria.1.t2:0 ""
+equestria.1.d1:0 ""
+equestria.1.d2:0 ""
+equestria.1.a:0 ""
