--- a/localisation/replace/state_names_overrides_l_russian.yml
+++ b/localisation/replace/state_names_overrides_l_russian.yml
@@ -153,7 +153,7 @@
  STATE_152:0 "STATE_152"
  STATE_153:0 "STATE_153"
  STATE_154:0 "STATE_154"
- STATE_155:0 "Кантерлотский Дворец"
+ STATE_155:0 "Южный Кантерлотский Дворец"
  STATE_156:0 "STATE_156"
  STATE_157:0 "STATE_157"
  STATE_158:0 "STATE_158"
@@ -1097,7 +1097,7 @@
  STATE_1096:0 "STATE_1096"
  STATE_1097:0 "STATE_1097"
  STATE_1098:0 "STATE_1098"
- STATE_1099:0 "STATE_1099"
+ STATE_1099:0 "Северный Кантерлотский Дворец"
  STATE_1100:0 "STATE_1100"
  STATE_1101:0 "STATE_1101"
  STATE_1102:0 "STATE_1102"
