--- a/localisation/country_EQS_l_english.yml
+++ b/localisation/country_EQS_l_english.yml
@@ -28,13 +28,21 @@ LUNA_HARMONY_LEADER_DESC:0 "The best Princess. (Change my mind)"
 #######################################################
 ##### EVENTS ##########################################
 #######################################################
-equestria.0.t:0 ""
-equestria.0.d:0 ""
+equestria.0.t_eqs:0 ""
+equestria.0.t_lun:0 ""
+equestria.0.d_eqs:0 ""
+equestria.0.d_lun:0 ""
 equestria.0.a:0 ""
 equestria.0.b:0 ""
+equestria.0.c:0 ""
+equestria.0.d:0 ""
 
 equestria.1.t1:0 ""
 equestria.1.t2:0 ""
+equestria.1.t3:0 ""
+equestria.1.t4:0 ""
 equestria.1.d1:0 ""
 equestria.1.d2:0 ""
+equestria.1.d3:0 ""
+equestria.1.d4:0 ""
 equestria.1.a:0 ""
