--- a/localisation/country_EQS_l_russian.yml
+++ b/localisation/country_EQS_l_russian.yml
@@ -28,23 +28,58 @@ LUNA_HARMONY_LEADER_DESC:0 "Лучшая Принцесса. (Change my mind)"
 #######################################################
 ##### EVENTS ##########################################
 #######################################################
-equestria.0.t_eqs:0 "В свете свечи"
-equestria.0.t_lun:0 "В свете свечи"
-equestria.0.d_eqs:0 "Этой ночью в одной из башен кантерлотского дворца горел свет.\nПеред распахнутым окном, в еле освещаемой одной только свечой комнате сидел уставший и не выспавшийся монарх Эквестрии – Король Сомбра, читая очередной рапорт, недавно пришедший с юга.\nНа секунду оторвавшись от бумаги он взглянул на выжженые к югу от Кантерлота поля, среди которых виднелся оккупированный Селестией и погружённый в темноту Понивилль.\nСомбра глубоко вздохнул и хотел было вернуться к чтению рапорта, но свеча, неожиданно для него, потухла."
-equestria.0.d_lun:0 "Этой ночью в одной из башен кантерлотского дворца горел свет.\nПеред распахнутым окном, в еле освещаемой одной только свечой комнате сидел уставший и не выспавшийся монарх Эквестрии – Король Сомбра, читая очередной рапорт, недавно пришедший с юга.\nНа секунду оторвавшись от бумаги он взглянул на выжженые к югу от Кантерлота поля, среди которых виднелся оккупированный Селестией и погружённый в темноту Понивилль.\nСомбра глубоко вздохнул и хотел было вернуться к чтению рапорта, но свеча, неожиданно для него, потухла."
-equestria.0.a:0 "Зажечь ещё одну свечу"
-equestria.0.b:0 "Не делать ничего"
-equestria.0.c:0 "Прилететь и зажечь рог"
-equestria.0.d:0 "Просто прилететь"
+equestria.0.t_eqs:0 "Ещё одна ночь в Кантерлоте"
+equestria.0.t_lun:0 "Ещё одна ночь в Кантерлоте"
+equestria.0.d_eqs:0 "Этой ночью в одной из башен кантерлотского дворца горел свет. Перед распахнутым окном, в еле освещаемой одной только свечой комнате сидел уставший и не выспавшийся монарх Эквестрии – Король Сомбра, читая очередной рапорт, недавно пришедший с юга. \n\nНа секунду оторвавшись от бумаги он взглянул на выжженые к югу от Кантерлота поля, среди которых виднелся оккупированный Селестией и погружённый в темноту Понивилль. Сомбра глубоко вздохнул и хотел было вернуться к чтению рапорта, но свеча, неожиданно для него, потухла."
+equestria.0.d_lun:0 "\t— Прекращай убегать от своих страхов. Встреть их лицом к лицу, как жеребец, а не маленький жеребёнок! – сказала Принцесса Луна жеребёнку, которому снился кошмар.\n\t— Угу, – хмыкнул тот, и Луна с улыбкой покинула его.\n\nОна сидела на самой высокой башне в Кантерлоте, в которую допускались только самые близкие ей пони. Состояние башни оставляло желать лучшего, но Луна запретила реставрировать её, и сама время от времени латала её с помощью магии.\n\nОна обратила внимание на одинокое окно, в котором до сих пор горел свет. \“Сомбра никак не может успокоиться\” – подумала она. \“Он так и не передал мне дела, может и вовсе забыл про это?\” – пока Луна размышляла, свет в комнате погас и она наконец решила его навестить."
+equestria.0.a:0 "Зажечь рог"
+equestria.0.b:0 "Поискать свечку"
+equestria.0.c:0 "Залететь в окно и осветить комнату"
+equestria.0.d:0 "Прилететь к окну"
 
-equestria.1.t1:0 "Сомбра"
-equestria.1.t2:0 "Луна"
-equestria.1.t3:0 "Оба"
-equestria.1.t4:0 "Никто"
-equestria.1.d1:0 "Сомбра зажёг свечу"
-equestria.1.d2:0 "Луна зажгла рог"
-equestria.1.d3:0 "Сомбра зажёг свечу, а Луна зажгла рог"
-equestria.1.d4:0 "Они остались в кромешной темноте"
-#equestria.1.d1:0 "В свете Луны Сомбра стал искать в потёмках ещё одну свечу, отойдя к ящикам в дальнем конце комнаты. Что-то на секунду преградило свет, шедший через окно, и она вся осветилась магическим светом.\n\t— Сомбра, ты опять не спишь? – удивлённо спросила Принцесса Луна, поместившись в центре комнаты. Её рог ярко горел холодным синим цветом. Сомбра слегка усмехнулся:\n\t— Тут, всё-таки, дверь есть, – взяв свечу из ящика заметил он.\n\t— Что опять случилось? – спросила Луна, склонившись над рапортом.\n\t— Бандиты атаковали южно-кантерлотский аванпост. Они думают, что это Селестия их подослала, но я сильно в этом сомневаюсь, – ответил ей Сомбра, ставя свечу на подсвечник и поджигая её.\nЛуна наконец-то потушила рог и обратилась к Сомбре:\n\t— Селестия сама опустила Солнце. В последнее время, она успокоилась.\n\t— И это не может не беспокоить, – добавил Сомбра, – может она что планирует?\nЛуна не ответила и грустно взглянула на юг:\n\t— Сколько это ещё может продолжаться?\n\t— Сколько потребуется, – сухо ответил Сомбра и вытащил несколько писем из ящика, – у меня ещё много работы, ты что-нибудь хотела сказать?\n\t— Нет... ничего, – ответила ему Луна и вышла в дверь."
-#equestria.1.d2:0 "Жёлтый магический свет озарил комнату и Сомбра уже было направился за следующей свечой, как приметил, что с балкончика самой высокой башни слетел силуэт. Через несколько секунд в окно комнаты влетела Луна и села рядом со столом:\n\t— Ты опять не спишь? – Спросила она Сомбру, направившись к ящику со свечами.\n\t— Не стоит, я и сам… – хотел он было остановить её, но Луна уже ловко подхватила свечу из ящика.\n\t— Селестия в этот раз сама опустила Солнце, – заметила Принцесса, ставя свечу на подсвечник.\n\t— Давно она этого не делала, – нахмурился Сомбра, снова взглянув на рапорт.\n\t— Только не говори мне, что это про очередной налёт, – немного грустно спросила Луна, поджигая свечу.\n\t— Почти, они не смогли сломить оборону нашего аванпоста, – Сомбра, наконец, потушил свой рог.\n\t— Селестийские бандиты? – как бы для галочки спросила Луна.\n\t— Не уверен, слишком не организованы, – уткнувшись в бумагу ответил Сомбра.\nЛуна печально посмотрела на измотанного со-монарха, но ничем помочь ему не могла.\n\t— Не переусердствуй, – сказала она ему и вышла в дверь."
-equestria.1.a:0 "\"Эту войну может окончить только чудо\""
+equestria.1.t1:0 "Неожиданный визит"
+equestria.1.t2:0 "\"В свете Луны\""
+equestria.1.t3:0 "Сомонархи"
+equestria.1.t4:0 "\"Слепой\" разговор"
+equestria.1.d1eqs:0 "\tСомбра быстро зажег свой рог и продолжил читать рапорт. Ночь была тихая и ему удалось расслышать едва слышимый шелест крыльев у окна.\n\t— Луна, я знаю, что это ты, – спокойным голосом заявил он.\n\t— Мне кажется, что тебе стоило бы поработать над собственной безопасностью, – ответила ему Луна, забираясь в окно.\n\t— Я не беспомощный жеребёнок, к тому-же, лететь вниз тут далеко, – не меняя тон сказал Сомбра, убирая рапорт и меняя его на письмо.\n\t— Никогда бы не подумала, что взгляд на юг будет мне напоминать о временах Старсвирла, – грустно сказала Луна, взглянув на Понивилль. \“Не шибко-то она много мне рассказывала о том, что творилось раньше\” – подумал Сомбра и спросил:\n\t— Всё было настолько плохо?\n\t— Я бы так не сказала, но и хорошего в этом было мало. Он якшался с разными бандитами и откровенными маньяками. От одной только Мэдоубрук меня до сих пор в дрожь бросает. Но не об этом сейчас...\n\t— Ладно, время не резиновое и мне ещё многое тебе надо передать, – сказал Сомбра и начал рыться в столе."
+equestria.1.d1lun:0 "Тихо подлетев к окну, Луна пристроилась прямо сбоку. В комнате загорелся магический свет, видимо Сомбра поджёг рог.\n\t— Луна, я знаю, что это ты, – спокойным голосом заявил он. \“Внимательность у него не отнять,\” – мысленно похвалила Сомбру Луна.\n\t— Мне кажется, что тебе стоило бы поработать над собственной безопасностью, – ответила ему она, забираясь в окно.\n\t— Я не беспомощный жеребёнок, к тому-же, лететь вниз тут далеко, – не меняя тон сказал Сомбра, убирая какую-то бумагу и меняя её на письмо. Взор Луны случайно упал на вид из окна:\n\t— Никогда бы не подумала, что взгляд на юг будет мне напоминать о временах Старсвирла, – грустно сказала она, взглянув на Понивилль.\n\t— Всё было настолько плохо? – спросил у неё Сомбра. Луне было больно вспоминать былые дни. Она тогда была ещё жеребёнком и делала много ошибок.\n\t— Я бы так не сказала, но и хорошего в этом было мало. Он якшался с разными бандитами и откровенными маньяками. От одной только Мэдоубрук меня до сих пор в дрожь бросает, – Луна вспомнила, что она особо ничего рассказывала Сомбре о том, что происходило в Эквестрии до него, – Но не об этом сейчас...\nСомбра немного погодя, сказал:\n\t— Ладно, время не резиновое и мне ещё многое тебе надо передать, – он начал рыться в столе."
+equestria.1.d2eqs:0 "Луна зажгла рог"
+equestria.1.d2lun:0 "Луна зажгла рог"
+equestria.1.d3eqs:0 "Сомбра зажёг рог, а Луна зажгла рог"
+equestria.1.d3lun:0 "Сомбра зажёг рог, а Луна зажгла рог"
+equestria.1.d4eqs:0 "Сомбра ищет свечу"
+equestria.1.d4lun:0 "Сомбра ищет свечу"
+equestria.1.a:0 "\”Так, давай разбираться.\”"
+equestria.1.b:0 "\"Ему точно следовало бы отдохнуть.\""
+equestria.1.c:0 "Спасибо. Теперь - за дело."
+equestria.1.d:0 "Что у нас там?"
+equestria.1.e:0 "\"Только бы она не задержалась...\""
+equestria.1.f:0 "\"И как он не устаёт?\""
+equestria.1.g:0 "Ага, нашёл!"
+equestria.1.h:0 "\"Ладно, хватит издеваться.\""
+
+equestria.2.tsombr:0 "Ночной разговор"
+equestria.2.tluna:0 "Ночной разговор"
+equestria.2.dsombr:0 ""
+equestria.2.dluna:0 ""
+equestria.2.a:0 "\"С каждым днем она делает это все быстрее.\""
+equestria.2.b:0 "Да. В этот раз особо постаралась для солдат."
+equestria.2.c:0 "Да. В этот раз особо постаралась для рабочих."
+equestria.2.d:0 "Да. В этот раз особо постаралась для руководителей."
+
+equestria.3.tsombr:0 "Реакция"
+equestria.3.tluna:0 "Реакция"
+equestria.3.dsombr:0 ""
+equestria.3.dluna:0 ""
+equestria.3.a:0 "\"Кошмаров всё больше...\""
+equestria.3.b:0 "Солдаты"
+equestria.3.c:0 "Работники"
+equestria.3.d:0 "Руководители"
+equestria.3.e:0 "Всё хорошо"
+
+equestria.4.tsombr:0 "Поздняя ночь"
+equestria.4.tluna:0 "Поздняя ночь"
+equestria.4.dsombr:0 ""
+equestria.4.dluna:0 ""
+equestria.4.a:0 "И сон нам только снится..."
+equestria.4.b:0 "\"Ну, была не была!\""
